# feather

./: .gitignore  CMakeLists.txt  README.md  idx.cpp  main.cpp  main.cu
feather/: array.h  container.h  cpu_blas.h  cuda.h  data.h  feather.h  index.h  math.h  misc.h  resource.h  tensor.h
feather/resources/: base_resource.h  device_resource.h  empty_resource.h  host_resource.h  managed_resource.h  pinned_resource.h
samples/0_simple/: matrixMul.cu  matrixMul_feather.cu  matrixMul_feather2.cu
